[MSVC] error C2039: 'weakPtrFactory': is not a member of 'WebCore::DocumentStorageAccess::requestStorageAccess::<lambda_3f2cfd7704f93d8fe19d5b5f064f8add>' https://bugs.webkit.org/show_bug.cgi?id=204437

Unreviewed build fix.

MSVC has a bug of a outer lambda's captured 'this' can't be used as
a lambda capture initializer of a inner lambda.

* dom/DocumentStorageAccess.cpp:
(WebCore::DocumentStorageAccess::requestStorageAccess): Replaced '*this' in the lambda capture initializer with '*weakThis'.

Canonical link: https://commits.webkit.org/217707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252726 268f45cc-cd09-0410-ab3c-d52691b4dbfc